@@ -1,3 +1,8 @@
+2004-07-23  Hasso Tepper  <hasso@estpak.ee>
+
+	* ospf6_interface.c, ospf6_zebra.c: use ifp->mtu6 instead of
+	  ifp->mtu.
+
 2004-07-23 Paul Jakma <paul@dishone.st>
 
 	* ospf6_main.c: Delete LOG_PERROR, not portable.
